--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                         {% if user.is_authenticated %}
                         <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'add' %}">Create Post</a>
                         {% else %}
-                        <a href="{% url 'account_login' %}" class="nav-link">Create Post</a>
+                        <a href="{% url 'account_login' %}" class="nav-link px-lg-3 py-3 py-lg-4">Create Post</a>
                         {% endif %}
                     </li>
 
@@ -53,24 +53,19 @@
 
                     {% endif %}
 
+                    {% if user.is_authenticated %}
+
                     <li class="nav-item">
-                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'user-profile' %}">Profile</a>
+                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'user-profile' user.id %}">Profile</a>
                     </li>
+
+                    {% endif %}
                 </ul>
             </div>
         </div>
     </nav>
     <!-- header -->
-    <header class="masthead" style="background-image: url(static/images/header-image.jpg)">
-        <div class="container position-relative px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <div class="site-heading">
-                        <h1>Sweetkeebz Forum</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <header class="masthead header-picture" style="background-image: url({% static 'images/header-image.jpg' %})">
     </header>
         {% block content %}
         <!--posts go here-->
