--- a/templates/post-editor.html
+++ b/templates/post-editor.html
@@ -5,7 +5,7 @@
     <form action="add" method="POST" enctype="multipart/form-data" class="post-form">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value="Post"></input>
+        <input type="submit" value="Post" class="btn btn-primary"></input>
     </form>
 </div>
 
