--- a/templates/update-post.html
+++ b/templates/update-post.html
@@ -2,10 +2,12 @@
 
 {% block content %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Save"></input>
-</form>
+<div class="form-container">
+    <form method="POST" class="post-form">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Save" class="btn btn-primary"></input>
+    </form>
+</div>
 
 {% endblock %}
