--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,13 @@
                                 {% endif %}
                             </a>
                             {% if user.is_authenticated %}
-                            <a href="{% url 'full_post' post.slug %}" class="comment-button"><i class="fa-regular fa-message-dots"></i>Comment</a>
+                            <a href="{% url 'full_post' post.slug %}" class="comment-button"><i class="fa-regular fa-comment"></i>
+                                <span>{{ comment_count }}</span>
+                            </a>
                             {% else %}
-                            <a href="{% url 'account_login' %}" class="comment-button"><i class="fa-regular fa-message-dots"></i>Comment</a>
+                            <a href="{% url 'account_login' %}" class="comment-button"><i class="fa-regular fa-comment"></i>
+                                <span>{{ comment_count }}</span>
+                            </a>
                             {% endif %}
                         </div>
                             {% if user == post.author %}
