--- a/templates/post.html
+++ b/templates/post.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="content">
                     <h2 class="card-title">{{ post.title }}</h2>
-                    <blockquote>Posted by: {{ post.author }} on {{ post.created_on }}</blockquote>
+                    <p class="post-meta">Posted by: {{ post.author }} on {{ post.created_on }}</p>
                     <p class="card-text">{{ post.content }}</p>
                 {% if post.image != 'placeholder' %}
                     <img src="{{ post.image.url }}" style="max-height: 300px" alt="image">
