--- a/templates/post-editor.html
+++ b/templates/post-editor.html
@@ -4,9 +4,28 @@
 <div class="form-container">
     <form action="add" method="POST" enctype="multipart/form-data" class="post-form">
         {% csrf_token %}
-        {{ form }}
+        <label>Title</label>
+        {{ form.title }}
+        <label>Content</label>
+        {{ form.content }}
+        <div id="image.preview" onchange="getImagePreview(event)">
+            {{ form.image }}
+        </div>
+        <div id="preview">
+
+        </div>
         <input type="submit" value="Post" class="btn btn-primary"></input>
     </form>
 </div>
+
+<script type="text/javascript">
+    function getImagePreview(event) {
+       var image=URL.createObjectURL(event.target.files[0]);
+       var imagediv=document.getElementById('preview');
+       var newimg=document.createElement('img');
+       newimg.src=image;
+       imagediv.appendChild(newimg);
+    }
+</script>
 
 {% endblock %}
