--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,10 @@
                 <ul class="navbar-nav ms-auto py-4 py-lg-0">
 
                     <li class="nav-item">
+                        <a href="#" class="nav-link px-lg-3 py-3 py-lg-4">About</a>
+                    </li>
+
+                    <li class="nav-item">
                         {% if user.is_authenticated %}
                         <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'add' %}">Create Post</a>
                         {% else %}
@@ -57,6 +61,10 @@
 
                     <li class="nav-item">
                         <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'user-profile' user.id %}">Profile</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-lg-3 py-3 py-lg-4"><i class="fa-regular fa-envelope"></i></a>
                     </li>
 
                     {% endif %}
