--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -1,10 +1,40 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<div class="form-container">
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ edit_user }}
-        {{ edit_profile }}
-        <input type="submit" value="save">
+        {{ edit_user.username }}
+        {{ edit_profile.about }}
+        <div id="image.preview" onchange="getImagePreview(event)">
+            {{ edit_profile.avatar }}
+        </div>
+        <div id="preview">
+            {% if profile.avatar != 'default.jpg' %}
+                <img src="{{ profile.avatar.url }}" class="avatar" alt="No image attatched" id="currentImagePreview">
+            {% endif %}
+        </div>
+        <input type="submit" value="save" class="btn btn-primary">
     </form>
+</div>
+
+<script type="text/javascript">
+    function getImagePreview(event) {
+        var currentImage=document.getElementById('currentImagePreview')
+        var image=URL.createObjectURL(event.target.files[0]);
+        var imagediv=document.getElementById('preview');
+
+        if (document.body.contains(currentImage)) {
+            imagediv.removeChild(currentImage)
+        };
+        var newimg=document.createElement('img');
+        newimg.src=image;
+        newimg.id='currentImagePreview'
+        newimg.style='border-radius: 100%; width: 200px; height: 200px;'
+        newimg.class='avatar'
+        imagediv.appendChild(newimg);
+    }
+</script>
+
 {% endblock %}
