--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                             <form action="{% url 'account_login' %}">
                             {% endif %}
                                 {% csrf_token %}
-                                {% if upvoted  %}
+                                {% if user in post.upvote.filter %}
                                     <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up" style="color: #0085A1;"></i></button>
                                 {% else %}
                                     <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
@@ -26,7 +26,7 @@
                             <form action="{% url 'account_login' %}">
                             {% endif %}
                                 {% csrf_token %}
-                                {% if downvoted  %}
+                                {% if user in post.downvote.filter  %}
                                     <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down" style="color: #0085A1;"></i></button>
                                 {% else %}
                                     <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
@@ -39,7 +39,7 @@
                                 <h3 class="post-title">{{ post.title }}</h3>
                                 <p>{{ post.content }}</p>
                                 {% if post.image != 'placeholder' %}
-                                    <img src="{{ post.image.url }}" style="max-height: 300px" alt="No image attatched">
+                                    <img src="{{ post.image.url }}" style="max-width: 100%" alt="No image attatched">
                                 {% endif %}
                             </a>
                             {% if user.is_authenticated %}
