--- a/templates/post.html
+++ b/templates/post.html
@@ -3,10 +3,10 @@
 {% block content %}
 
 <!--post-->
-<div class="mb-4">
-    <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7 post">
+<div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-10 col-lg-8 col-xl-7 post">
+            <div class="post">
                 <div class="vote">
                     {% if user.is_authenticated %}
                         <form action="{% url 'upvote' post.slug %}" method="POST">
@@ -14,7 +14,7 @@
                         <form action="{% url 'account_login' %}">
                     {% endif %}
                         {% csrf_token %}
-                        {% if upvoted  %}
+                        {% if user in post.upvote.filter  %}
                             <button type="submit" name="post_upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up" style="color: #0085A1;"></i></button>
                         {% else %}
                             <button type="submit" name="post_upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
@@ -27,7 +27,7 @@
                         <form action="{% url 'account_login' %}">
                     {% endif %}
                         {% csrf_token %}
-                        {% if downvoted  %}
+                        {% if user in post.downvote.filter  %}
                             <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down" style="color: #0085A1;"></i></button>
                         {% else %}
                             <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
@@ -35,17 +35,17 @@
                     </form>
                 </div>
                 <div class="content">
-                    <h2 class="card-title">{{ post.title }}</h2>
+                    <h2 class="post-title">{{ post.title }}</h2>
                     <p class="post-meta">Posted by: {{ post.author }} on {{ post.created_on }}</p>
-                    <p class="card-text">{{ post.content }}</p>
+                    <p>{{ post.content }}</p>
                 {% if post.image != 'placeholder' %}
-                    <img src="{{ post.image.url }}" style="max-height: 300px" alt="image">
+                    <img src="{{ post.image.url }}" style="max-width: 100%" alt="No image attatched">
                 {% endif %}
                 </div>
             </div>
         </div>
     </div>
-</div>        
+</div>       
 <hr>
 <div class="card-container">
     {% if not editing %}
@@ -65,7 +65,7 @@
 <hr>
 <!--here are the comments-->
 {% if not editing %}
-    <div class="containter px-4 px-lg-5">
+    <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 {% for comment in comment_list %}
@@ -84,6 +84,7 @@
                         <p class="post-meta"> commented by: <a href="{% url 'user-profile' comment.commenter %}">{{ comment.commenter }}</a> on: {{ comment.created_on }}</p>
                         <p>{{ comment.comment }}</p>
                     </div>
+                    <a href="#" class="btn btn-primary">Reply</a>
                     <hr class="my-4">
                 {% endfor %}
             </div>
