--- a/templates/update-post.html
+++ b/templates/update-post.html
@@ -5,9 +5,35 @@
 <div class="form-container">
     <form method="POST" class="post-form">
         {% csrf_token %}
-        {{ form }}
+        {{ form.title }}
+        {{ form.content }}
+        <div id="image.preview" onchange="getImagePreview(event)">
+            {{ form.image }}
+        </div>
+        <div id="preview">
+            {% if post.image != 'placeholder' %}
+            <img src="{{ post.image.url }}" style="max-width: 100%;" alt="No image attatched" id="currentImagePreview">
+            {% endif %}
+        </div>
         <input type="submit" value="Save" class="btn btn-primary"></input>
     </form>
 </div>
+
+<script type="text/javascript">
+    function getImagePreview(event) {
+        var currentImage=document.getElementById('currentImagePreview')
+        var image=URL.createObjectURL(event.target.files[0]);
+        var imagediv=document.getElementById('preview');
+
+        if (document.body.contains(currentImage)) {
+            imagediv.removeChild(currentImage)
+        };
+        var newimg=document.createElement('img');
+        newimg.src=image;
+        newimg.class='avatar';
+        newimg.id='currentImagePreview';
+        imagediv.appendChild(newimg);
+    }
+</script>
 
 {% endblock %}
