--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,10 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link px-lg-3 py-3 py-lg-4"><i class="fa-regular fa-envelope"></i></a>
+                        <a href="#" class="nav-link px-lg-3 py-3 py-lg-4">
+                            <i class="fa-regular fa-envelope" style="font-size: 18px"></i>
+                            <span>10</span>
+                        </a>
                     </li>
 
                     {% endif %}
