--- a/templates/post-editor.html
+++ b/templates/post-editor.html
@@ -12,6 +12,7 @@
         </div>
         <div class="form-item">
             <div id="image.preview" onchange="getImagePreview(event)">
+                <button type="button" id="custom-button"><i class="fa-sharp fa-regular fa-image"></i></button>
                 {{ form.image }}
             </div>
         </div>
@@ -20,23 +21,27 @@
 
             </div>
         </div>
-        <input type="submit" value="Post" class="btn btn-primary" id="post-button"></input>
+        <input type="submit" value="Post" class="btn btn-primary mb-2" id="post-button"></input>
     </form>
 </div>
 
 <script type="text/javascript">
-    function getImagePreview(event) {
-       var image=URL.createObjectURL(event.target.files[0]);
-       var imagediv=document.getElementById('preview');
-       var newimg=document.createElement('img');
-       newimg.src=image;
-       imagediv.appendChild(newimg);
-    }
 
-    $('textarea').keyup(function (e) {
-        var rows=$(this).val().split("\n");
-        $(this).prop('rows', rows.length);
-    })
+    var realFileBtn = document.getElementById("realfilebutton");
+    var customFileBtn = document.getElementById('custom-button');
+
+    customFileBtn.addEventListener("click", function() {
+        realFileBtn.click();
+    });
+
+
+    function getImagePreview(event) {
+        var image=URL.createObjectURL(event.target.files[0]);
+        var imagediv=document.getElementById('preview');
+        var newimg=document.createElement('img');
+        newimg.src=image;
+        imagediv.appendChild(newimg);
+    }
 </script>
 
 {% endblock %}
