--- a/templates/index.html
+++ b/templates/index.html
@@ -35,11 +35,11 @@
                         </div>
                         <div class="content">
                             <p class="post-meta">Posted by: <a href="{% url 'user-profile' post.author.id %}">{{ post.author }}</a> on {{ post.created_on }}</p>
-                            <a href="{% url 'full_post' post.slug %}">
+                            <a href="{% url 'full_post' post.slug %}" style="display: flex; flex-direction: column;">
                                 <h3 class="post-title">{{ post.title }}</h3>
                                 <p>{{ post.content }}</p>
                                 {% if post.image != 'placeholder' %}
-                                    <img src="{{ post.image.url }}" style="max-width: 100%" alt="No image attatched">
+                                    <img src="{{ post.image.url }}" style="width: 100%; height: 60%; object-fit: cover;" alt="No image attatched">
                                 {% endif %}
                             </a>
                             {% if user.is_authenticated %}
