--- a/templates/post-editor.html
+++ b/templates/post-editor.html
@@ -4,6 +4,7 @@
 <div class="form-container">
     <form action="add" method="POST" enctype="multipart/form-data" class="post-form">
         {% csrf_token %}
+        <p style="color: red;">{{ error_msg }}</p>
         <div class="form-item">
             {{ form.title }}
         </div>
