--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -19,7 +19,6 @@
         </div>
     </div>
     <hr>
-    <p>Posts made by {{ profile.user }}:</p>
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
@@ -32,7 +31,7 @@
                             <form action="{% url 'account_login' %}">
                             {% endif %}
                                 {% csrf_token %}
-                                {% if upvoted  %}
+                                {% if user in post.upvote.filter %}
                                     <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up" style="color: #0085A1;"></i></button>
                                 {% else %}
                                     <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
@@ -40,12 +39,12 @@
                             </form>
                             <span>{{ post.vote_result }}</span>
                             {% if user.is_authenticated %}
-                            <form action="{% url 'downvote' post.slug %}" method="POST" class="downvote">
+                            <form action="{% url 'out-downvote' post.slug %}" method="POST" class="downvote">
                             {% else %}
                             <form action="{% url 'account_login' %}">
                             {% endif %}
                                 {% csrf_token %}
-                                {% if downvoted  %}
+                                {% if user in post.downvote.filter  %}
                                     <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down" style="color: #0085A1;"></i></button>
                                 {% else %}
                                     <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
@@ -53,12 +52,12 @@
                             </form>
                         </div>
                         <div class="content">
-                            <a href="{% url 'full_post' post.slug %}">
-                                <p class="post-meta">Posted by: {{ post.author }} on {{ post.created_on }}</p>
+                            <p class="post-meta">Posted by: <a href="{% url 'user-profile' post.author.id %}">{{ post.author }}</a> on {{ post.created_on }}</p>
+                            <a href="{% url 'full_post' post.slug %}" style="display: flex; flex-direction: column;">
                                 <h3 class="post-title">{{ post.title }}</h3>
                                 <p>{{ post.content }}</p>
                                 {% if post.image != 'placeholder' %}
-                                    <img src="{{ post.image.url }}" style="max-height: 300px" alt="No image attatched">
+                                    <img src="{{ post.image.url }}" style="width: 100%; height: 60%; object-fit: cover;" alt="No image attatched">
                                 {% endif %}
                             </a>
                             {% if user.is_authenticated %}
@@ -71,7 +70,7 @@
                             </a>
                             {% endif %}
                         </div>
-                            {% if user.is_authenticated %}
+                            {% if user == post.author %}
                                 <div class="dropdown">
                                     <button class='three-dot-button' type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -83,7 +82,6 @@
                                 </div>
                             {% endif %}
                     </div>
-                    <hr class="my-4">
                 {% endfor %}
             </div>
         </div>
