--- a/templates/base.html
+++ b/templates/base.html
@@ -2,121 +2,118 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
-    <script src="https://kit.fontawesome.com/98cbf5f74a.js" crossorigin="anonymous"></script>
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    <!-- style -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/cleanblog.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Sweetkeebz Forum</title>
-</head>
-<body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-        <div class="container px-4 px-lg-5" id="mainNav">
-            <a class='navbar-brand' href="{% url 'home' %}">Sweetkeebz Forum</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto py-4 py-lg-0">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+        <script src="https://kit.fontawesome.com/98cbf5f74a.js" crossorigin="anonymous"></script>
+        <!-- bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+        <!-- style -->
+        <link rel="stylesheet" type="text/css" href="{% static 'css/cleanblog.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <title>Sweetkeebz Forum</title>
+    </head>
+    <body>
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+            <div class="container px-4 px-lg-5">
+                <a class='navbar-brand' href="{% url 'home' %}">Sweetkeebz Forum</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
 
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-lg-3 py-3 py-lg-4">About</a>
-                    </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link px-lg-3 py-3 py-lg-4">About</a>
+                        </li>
 
-                    <li class="nav-item">
+                        <li class="nav-item">
+                            {% if user.is_authenticated %}
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'add' %}">Create Post</a>
+                            {% else %}
+                            <a href="{% url 'account_login' %}" class="nav-link px-lg-3 py-3 py-lg-4">Create Post</a>
+                            {% endif %}
+                        </li>
+
                         {% if user.is_authenticated %}
-                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'add' %}">Create Post</a>
+
+                        <li class="nav-item">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'account_logout' %}">Logout</a>
+                        </li>
+
                         {% else %}
-                        <a href="{% url 'account_login' %}" class="nav-link px-lg-3 py-3 py-lg-4">Create Post</a>
+
+                        <li class="nav-item">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'account_login' %}">Login</a>
+                        </li>
+
                         {% endif %}
-                    </li>
 
-                    {% if user.is_authenticated %}
+                        {% if user.is_authenticated %}
 
-                    <li class="nav-item">
-                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'account_logout' %}">Logout</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'user-profile' user.id %}">Profile</a>
+                        </li>
 
-                    {% else %}
-
-                    <li class="nav-item">
-                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'account_login' %}">Login</a>
-                    </li>
-
-                    {% endif %}
-
-                    {% if user.is_authenticated %}
-
-                    <li class="nav-item">
-                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'user-profile' user.id %}">Profile</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="{% url 'notifications' %}" class="nav-link px-lg-3 py-3 py-lg-4">
-                            <i class="fa-regular fa-envelope" style="font-size: 18px"></i>
-                            <span>{{ user.notification.count }}</span>
-                        </a>
-                    </li>
-
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- header -->
-    <header class="masthead header-picture" style="background-image: url({% static 'images/header-image.jpg' %})">
-    </header>
-    <div class="main-content">
-    {% block content %}
-    {% endblock %}
-    </div>
-    <footer class="border-top">
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <ul class="list-inline text-center">
-                        <li class="list-inline-item">
-                            <a href="#!">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                                </span>
+                        <li class="nav-item">
+                            <a href="{% url 'notifications' %}" class="nav-link px-lg-3 py-3 py-lg-4">
+                                <i class="fa-regular fa-envelope" style="font-size: 18px"></i>
+                                <span>{{ user.notification.count }}</span>
                             </a>
                         </li>
-                        <li class="list-inline-item">
-                            <a href="#!">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#!">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
+        </nav>
+        <!-- header -->
+        <header class="masthead header-picture" style="background-image: url({% static 'images/header-image.jpg' %})">
+        </header>
+        <div class="main-content">
+            {% block content %}
+            {% endblock %}
         </div>
-    </footer>
-</body>
-
-
+        <footer class="border-top">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <ul class="list-inline text-center">
+                            <li class="list-inline-item">
+                                <a href="#!">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#!">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#!">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
