--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link px-lg-3 py-3 py-lg-4">About</a>
+                            <a href="{% url 'about' %}" class="nav-link px-lg-3 py-3 py-lg-4">About</a>
                         </li>
 
                         <li class="nav-item">
