--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -14,9 +16,13 @@
                             {% endif %}
                                 {% csrf_token %}
                                 {% if user in post.upvote.filter %}
-                                    <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up" style="color: #0085A1;"></i></button>
+                                    <button type="submit" name="upvote" value="{{ post.id }}" title="Remove Upvote">
+                                        <i class="fa-solid fa-caret-up" style="color: #0085A1;"></i>
+                                    </button>
                                 {% else %}
-                                    <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
+                                    <button type="submit" name="upvote" value="{{ post.id }}" title="Upvote">
+                                        <i class="fa-solid fa-caret-up"></i>
+                                    </button>
                                 {% endif %}
                             </form>
                             <span>{{ post.vote_result }}</span>
@@ -27,9 +33,13 @@
                             {% endif %}
                                 {% csrf_token %}
                                 {% if user in post.downvote.filter  %}
-                                    <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down" style="color: #0085A1;"></i></button>
+                                    <button type="submit" name="downvote" value="{{ post.id }}" title="Remove Downvote">
+                                        <i class="fa-solid fa-caret-down" style="color: #0085A1;"></i>
+                                    </button>
                                 {% else %}
-                                    <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
+                                    <button type="submit" name="downvote" value="{{ post.id }}" title="Downvote">
+                                        <i class="fa-solid fa-caret-down"></i>
+                                    </button>
                                 {% endif %}
                             </form>
                         </div>
@@ -43,7 +53,8 @@
                                 {% endif %}
                             </a>
                             {% if user.is_authenticated %}
-                            <a href="{% url 'full_post' post.slug %}" class="comment-button"><i class="fa-regular fa-comment"></i>
+                            <a href="{% url 'full_post' post.slug %}" class="comment-button" title="comment">
+                                <i class="fa-regular fa-comment"></i>
                                 <span>{{ post.comments.count }}</span>
                             </a>
                             {% else %}
