--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<h1>Sweetkeebz Forum</h1>
-
-<p>Sweetkeebz is a Forum deticated</p>
-
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <h1>Sweetkeebz Forum</h1>
+                <h2>About</h2>
+                <p>
+                    Sweetkeebz Forum is an online forum for users who share the hobby of building mechanical keyboards.
+                    On this website users can share news about the mechanical keyboards scene, showcase their own projects,
+                    products or services or ask questions and recive information that will benefit the user. 
+                </p>
+                <h2>History</h2>
+                <p>
+                    Sweetkeebz started out as an idea about a company in Europe that sells mechanical keyboard related products such
+                    as DIY kits, keycaps, switches or even build services. Since then it has grown and taken on many
+                    forms in the mechanical keyboard scene, arranging events, building typetests and hosting competitions.
+                    Now Sweetkeebz has created a forum which is home to anyone who has content or questions about mechanical 
+                    keyboards to share.
+                </p>
+                <h2>Goals</h2>
+                <p>
+                    The goal with this website is to create a go-to place for people who share the mechanical keyboard hobby. The hobby is 
+                    vast, and there are hundreds of forums and shops which you can explore. The goal of sweetkeebz is to keep everything in
+                    one place while still giving credit to the companies creating the products. We want users to feel less intimidated by 
+                    the scene and to more easily find the products and information that they are looking for so that anyone can have that 
+                    premium feel when working.
+                </p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
