--- a/static/css/cleanblog.css
+++ b/static/css/cleanblog.css
@@ -11052,7 +11052,7 @@ blockquote {
   text-transform: uppercase;
 }
 #mainNav .navbar-nav > li.nav-item > a.nav-link {
-  font-size: 0.75rem;
+  font-size: 0.9rem;
   font-weight: 800;
   letter-spacing: 0.0625em;
   text-transform: uppercase;
@@ -11117,7 +11117,7 @@ footer {
 header.masthead {
   position: relative;
   margin-bottom: 3rem;
-  padding-top: calc(8rem + 57px);
+  padding-top: 6rem;
   background: no-repeat center center;
   background-color: #6c757d;
   background-size: cover;
