--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class='navbar-brand' href="{% url 'home' %}">Sweetkeebz Forum</a>
+                <a class='navbar-brand' href="{% url 'home' %}" style="font-size: 42px;">Sweetkeebz Forum</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -64,9 +64,12 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="{% url 'notifications' %}" class="nav-link px-lg-3 py-3 py-lg-4">
-                                <i class="fa-regular fa-envelope" style="font-size: 18px"></i>
-                                <span>{{ user.notification.count }}</span>
+                            <a href="{% url 'notifications' %}" id="notification-link" class="nav-link px-lg-3 py-3 py-lg-4">
+                                Notifications
+                                <p>{{ has_notification }}</p>
+                                {% if user.profile.has_notification %}
+                                    <div class="new-notification"></div>
+                                {% endif %}
                             </a>
                         </li>
                         {% endif %}
