--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                             <p class="post-meta">Posted by: <a href="{% url 'user-profile' post.author.id %}">{{ post.author }}</a> on {{ post.created_on }}</p>
                             <a href="{% url 'full_post' post.slug %}" style="display: flex; flex-direction: column;">
                                 <h3 class="post-title">{{ post.title }}</h3>
-                                <p>{{ post.content }}</p>
+                                <p class="post-text">{{ post.content }}</p>
                                 {% if post.image != 'placeholder' %}
                                     <img src="{{ post.image.url }}" style="width: 100%; height: 60%; object-fit: cover;" alt="No image attatched">
                                 {% endif %}
