--- a/templates/post-editor.html
+++ b/templates/post-editor.html
@@ -39,7 +39,15 @@
     function getImagePreview(event) {
         var image=URL.createObjectURL(event.target.files[0]);
         var imagediv=document.getElementById('preview');
+        var currentImage = document.getElementById('currentImagePreview')
+
+        if (document.body.contains(currentImage)) {
+            imagediv.removeChild(currentImage)
+        };
+
         var newimg=document.createElement('img');
+        newimg.id='currentImagePreview'
+        newimg.style='width: 100%;'
         newimg.src=image;
         imagediv.appendChild(newimg);
     }
