fix css not loading

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,12 @@ a {
     flex-direction: row;
 }
 
+.post-image {
+    width: 100%; 
+    height: 60%; 
+    object-fit: cover;
+}
+
 .info {
     color: grey;
     font-size: small;
@@ -207,8 +213,6 @@ footer {
         justify-content: center;
     }
 }
-
-/* about */
 
 /* notifications */
 
