--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
                                 <h3 class="post-title">{{ post.title }}</h3>
                                 <p class="post-text">{{ post.content }}</p>
                                 {% if post.image != 'placeholder' %}
-                                    <img src="{{ post.image.url }}" style="width: 100%; height: 60%; object-fit: cover;" alt="No image attatched">
+                                    <img src="{{ post.image.url }}" class="post-image" alt="No image attatched">
                                 {% endif %}
                             </a>
                             {% if user.is_authenticated %}
