--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -53,22 +53,14 @@
                         </div>
                         <div class="content">
                             <p class="post-meta">Posted by: <a href="{% url 'user-profile' post.author.id %}">{{ post.author }}</a> on {{ post.created_on }}</p>
-                            <a href="{% url 'full_post' post.slug %}" style="display: flex; flex-direction: column;">
+                            <a href="{% url 'full_post' post.slug %}">
                                 <h3 class="post-title">{{ post.title }}</h3>
                                 <p class="post-text">{{ post.content }}</p>
-                                {% if post.image != 'placeholder' %}
+                                {% if post.image|default_if_none:'' %}
                                     <img src="{{ post.image.url }}" style="width: 100%; height: 60%; object-fit: cover;" alt="No image attatched">
                                 {% endif %}
+                                <span><i class="fa-regular fa-comment"></i>{{ post.comments.count }}</span>
                             </a>
-                            {% if user.is_authenticated %}
-                            <a href="{% url 'full_post' post.slug %}" class="comment-button"><i class="fa-regular fa-comment"></i>
-                                <span>{{ post.comments.count }}</span>
-                            </a>
-                            {% else %}
-                            <a href="{% url 'account_login' %}" class="comment-button"><i class="fa-regular fa-comment"></i>
-                                <span>{{ post.comments.count }}</span>
-                            </a>
-                            {% endif %}
                         </div>
                             {% if user == post.author %}
                                 <div class="dropdown">
