--- a/templates/base.html
+++ b/templates/base.html
@@ -80,33 +80,39 @@
         <!-- header -->
         <header class="masthead header-picture" style="background-image: url({% static 'images/header-image.jpg' %})">
         </header>
+        <!-- content -->
         <div class="main-content">
             {% block content %}
             {% endblock %}
         </div>
+        <!-- footer -->
         <footer class="border-top">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
+                        <!-- social media links -->
                         <ul class="list-inline text-center">
+                            <!-- twitter link -->
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://twitter.com">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
+                            <!-- facebook link -->
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://www.facebook.com/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
+                            <!-- github link -->
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://github.com/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-github fa-stack-1x fa-inverse"></i>
